Move SOQL query outside the loop in OrderHandler to avoid query limits.

--- a/force-app/main/default/classes/OrderHandler.cls
+++ b/force-app/main/default/classes/OrderHandler.cls
@@ -13,17 +13,24 @@ public class OrderHandler {
      * @param oldOrderMap A map of old Order records, keyed by Order ID.
      */
     public static void validateOrderActivation(List<Order> newOrders, Map<Id, Order> oldOrderMap) {
+        Set<Id> orderIds = new Set<Id>();
         for (Order ord : newOrders) {
             if (ord.Status == 'Activated' && oldOrderMap.get(ord.Id).Status == 'Draft') {
-                Boolean hasProducts = [SELECT COUNT() FROM OrderItem WHERE OrderId = :ord.Id] > 0;
-
-                if (!hasProducts) {
-                    ord.addError('This order cannot be activated without associated products. Please add products before changing the status to Activated.');
-                }
+                orderIds.add(ord.Id);
+            }
+        }
+    
+        Map<Id, OrderItem> orderItemsMap = new Map<Id, OrderItem>(
+            [SELECT OrderId FROM OrderItem WHERE OrderId IN :orderIds]
+        );
+    
+        for (Order ord : newOrders) {
+            if (ord.Status == 'Activated' && !orderItemsMap.containsKey(ord.Id)) {
+                ord.addError('This order cannot be activated without associated products. Please add products before changing the status to Activated.');
             }
         }
     }
-
+    
     /**
      * Handles the insertion of new Orders.
      * Automatically checks the Active__c field on related Accounts.
